@startuml models
'https://plantuml.com/sequence-diagram

hide empty methods
hide circle


class RuntimePlatform {
    platformId: string
    baseUrl: URL
    provides: string[]
    connections: URL[]
    runningSince: datetime
}
RuntimePlatform *- "*" AgentContainer: containers


class PostAgentContainer {
    arguments: {string: string}
    pull: boolean
    clientConfig: {string: any}
}
PostAgentContainer *-- AgentContainerImage: image

class AgentContainer {
    containerId: string
    owner: string
    runningSince: datetime
    arguments: {string: string}
}
AgentContainer *-- "*" AgentDescription: agents
AgentContainer *--  AgentContainerImage: image
AgentContainer *-- Connectivity: connectivity

class Connectivity {
    publicUrl: URL
    apiPortMapping: integer
}
Connectivity *-- "*" PortDescription: extraPortMappings


class AgentContainerImage {
    name: string
    version: string
    description: string
    provider: string
    url: URL
    imageName: string
    requires: string[]
    provides: string[]
    apiPort: integer
    definitions: {string, JSON}
}
AgentContainerImage *-- "*" PortDescription: extraPorts
AgentContainerImage *-- "*" ImageParameter: parameters

class PortDescription {
    port: integer
    protocol: string
    description: string
}
' actually "port" is not an attribute but the key in a hash map

class ImageParameter {
    name: string
    type: string
    required: boolean
    confidential: boolean
    defaultValue: string
}

class AgentDescription {
    agentId: string
    agentType: string
    description: string
}
AgentDescription *-- "*" Action: actions
AgentDescription *-- "*" Stream: streams

class Stream {
    name: string
    description: string
    mode: GET|POST
}

class Action {
    name: string
    description: string
    parameters: {string: Parameter}
    result: Parameter
}
Action --> "*" Parameter: parameters

class Parameter {
    type: string
    required: boolean
    defaultValue: any
}
Parameter *-right- "*" ArrayItems: items

class ArrayItems {
    type: string
}
ArrayItems *-- "*" ArrayItems: items

class Message {
    payload: json
    replyTo: string
}
hide Message

@enduml
